--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -1,15 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsksmt389/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsksmt389/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsksmt389/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsksmt389/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.18】全球单日新病例首破40万</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228396688-600x400.jpg" />
-<h6>法国7天平均新病例欧洲最高，每天感染19,425例，周六（10月16日）法国报告称，在过去24小时内，有32,427新病例。其次受影响最严重的欧洲国家包括英国，俄罗斯，西班牙和荷兰。图为法国医护人员。( DAMIEN MEYER/AFP via Getty Images)
+<tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.18】欧美病例激增 但死亡人数少</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1210329499-600x400.jpg" />
+<h6>在欧洲和美国，疫情大流行中的中共病毒病例已连续第三次急剧上升，但据报导死亡人数并未按比例增加。( DAMIEN MEYER/AFP via Getty Images)
 </h6>
 <hr>
 	<p>【大纪元2020年10月18日讯】（大纪元记者夏雨、戴芙若、林南、颜殊璟、萧律生综合报导）10月18日全球<ahref="https://github.com/xsksmt389/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/xsksmt389/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/xsksmt389/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101814">推特删白宫顾问“口罩无用论”推文/a></strong><br />
+<p><strong><ahref="#_Toc2020101815">欧美病例激增 但死亡人数少</a></strong><br />
+<strong><ahref="#_Toc2020101814">推特删白宫顾问“口罩无用论”推文</a></strong><br />
 <strong><ahref="#_Toc2020101813">WHO：欧洲某些地区的重症监护病房近满员</a></strong><br />
 <strong><ahref="#_Toc2020101811">瑞士宣布全国口罩令</a></strong><br />
 <strong><ahref="#_Toc2020101810">教皇方济各住所的居民测试呈阳性</a></strong><br />
@@ -24,6 +25,18 @@
 <p>美国总统川普（特朗普）再次表示，中共向世界释放病毒，美国将追责，让中共为美国的刺激法案资金买单。美国国务卿蓬佩奥也表示，中共已经为瞒疫付出沉重代价。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/xsksmt389/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<p><a name="_Toc2020101815"></a></p>
+<h3>欧美病例激增 但死亡人数少</h3>
+<p>在欧洲和美国，疫情大流行中的中共病毒病例已连续第三次急剧上升，但据报导死亡人数并未按比例增加。</p>
+<p>纽时报导，部分原因可能是更广泛的测试。密歇根大学的流行病学家乔恩·泽尔纳（Jon Zelner）说，许多其他病例很可能是在没有症状或轻度疾病的年轻人中发现的，这些病例以前可能没有被发现。他在接受采访时说，这就是密歇根州现在正在发生的事情。</p>
+<p>但是他说，这也可能只是时间问题。他说，现在发生的死亡案例大都是30至40天前患病的人。预计当前病例的增加将反映在11月死亡人数的增加上。</p>
+<p>在欧洲国家和美国各州，单日和每周记录新病例的增加，越来越普遍。</p>
+<p>在美国，过去14天的平均每日报告病例增加了28％，住院人数也在增加，而死亡人数仅增加了1％。</p>
+<p>俄亥俄州，印第安纳州，北达科他州，伊利诺伊州，新墨西哥州，怀俄明州，科罗拉多州，南达科他州，肯塔基州，西维吉尼亚州和爱达荷州本周报告的病例数均超过了之前的7天。明尼苏达州也是如此，尽管由于计算机更新，该州周六未报告新病例。</p>
+<p>这些州中只有一个州——北达科他州——是八个报告死亡人数相对于其人口最高的州。</p>
+<p>根据《泰晤士报》的数据库，在法国，上周报告了115,897例病例和619例死亡，然后在巴黎和其他城市实行了宵禁。意大利周六报告了10,925例新感染病例的记录，几乎是14天前平均感染人数的三倍，死亡案例47例。预计政府将在周日宣布进一步的限制。</p>
+<p>据卫生部称，波兰也达到了新的高度，周六有9,622例新感染，84例相关死亡。乌克兰已将封锁延长至今年年底，据其国家安全和国防委员会称，乌克兰周六分别记录了6,410例新感染和109例死亡。</p>
+<p>世界卫生组织周四表示，自大流行开始以来，欧洲地区每周发生的病例数最高。该组织的区域负责人汉斯·克鲁格（Hans Kluge）表示：“每天的病例数在增加，住院治疗在增加，Covid-19现在是第五大死亡原因，每天的死亡人数已经达到了1000例。”尽管如此，死亡人数仍比四月份的高峰少五倍。</p>
 <p><a name="_Toc2020101814"></a></p>
 <h3>推特删白宫顾问“口罩无用论”推文</h3>
 <p>推特（Twitter）从白宫中共病毒高级顾问斯科特·阿特拉斯博士（Dr. Scott Atlas）那里删除了一条推文，该推文质疑口罩在对抗COVID-19方面的有效性。</p>
@@ -278,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">文革中自杀的几个名人（3）红岩作者罗广斌</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/5/n4520825.md#1" target="_blank">石铭：从爆破专家被酷刑致死看江氏集团的惨无人道</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/18/n11052730.md#1" target="_blank">王友群：按邓小平的说法 中共早该下台了</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11236766.md#1" target="_blank">幸遇大法重获希望 华府法轮功学员感恩师父</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -305,6 +318,6 @@
 <li><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12480185.md#1">11天连飞1.2万公里 几百克重小鸟创世界纪录</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsksmt389/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsksmt389/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/11/n12468511.htm">【最新疫情10.18】全球单日新病例首破40万</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsksmt389/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsksmt389/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/11/n12468511.htm">【最新疫情10.18】欧美病例激增 但死亡人数少</a></p><hr>
 
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsksmt389/djy/blob/master/gb/20/10/11/n12468511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsksmt389/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsksmt389/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsksmt389/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
